# new-todo-app

./: .gitignore  DEPLOYMENT_SUMMARY.md  Dockerfile  README.md  VERCEL_DEPLOYMENT_GUIDE.md  api_test.py  debug_test.py  final_verification.py  main.py  pyproject.toml  run_server.py  simple_test_auth.py  start_server.py  test_api.html  test_api.py  test_auth.py  test_corrected_flow.py  test_fix.js  test_fixes.py  test_frontend_errors.py  test_login_final.py  test_login_issues.py  test_todo_flow.py  test_user_isolation.js  test_workflow.py  vercel.json
.claude/: settings.local.json
.github/workflows/: deploy.yml
.specify/memory/: constitution.md
backend/: alembic.ini  main.py  requirements-compatible.txt  requirements-simple.txt  requirements-working.txt  requirements.txt  server.py  setup.py
backend/alembic/: env.py
backend/api/: auth.py  todos.py
backend/core/: config.py  security.py
backend/database/: init_db.py  session.py
backend/models/: todo.py  user.py
backend/schemas/: todo.py  user.py
backend/services/: todo_service.py
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/api/: README.md
frontend/app/: error.tsx  layout.tsx  not-found.tsx  page.tsx
frontend/components/: Button.tsx  Footer.tsx
specs/1-console-todo-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/2-todo-fullstack-web/: data-model.md  quickstart.md  research.md  spec.md  tasks.md
src/app/: todo_service.py
src/cli/: menu.py
src/domain/: todo.py
src/storage/: in_memory_store.py
(+16 files in other folders)
