[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools"

[project]
name = "console-todo-app"
version = "0.1.0"
description = "Phase I – In-Memory Console Todo App"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
"Homepage" = "https://github.com/your-username/console-todo-app"
"Bug Reports" = "https://github.com/your-username/console-todo-app/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]